Working on UI, trying to figure out font bugs

--- a/html/ui.html
+++ b/html/ui.html
@@ -1,7 +1,19 @@
-<div id="title-bar">
+<div id="shrub-title-bar">
 	<h1>
-		Shrub v0.0.6
+		Shrub v0.2.0
 	</h1>
 </div>
-<div id="browser">
+<div id="shrub-browser">
+	<div class="shrub-browser-link"><p>A</p></div>
+	<div class="shrub-browser-link"><p>A</p></div>
+	<div class="shrub-browser-link"><p>A</p></div>
+	<div class="shrub-browser-link"><p>A</p></div>
+	<div class="shrub-browser-link"><p>A</p></div>
+	<div class="shrub-browser-link"><p>A</p></div>
+	<div class="shrub-browser-link"><p>A</p></div>
+	<div class="shrub-browser-link"><p>A</p></div>
+	<div class="shrub-browser-link"><p>A</p></div>
+	<div class="shrub-browser-link"><p>A</p></div>
+	<div class="shrub-browser-link"><p>A</p></div>
+	<div class="shrub-browser-link"><p>A</p></div>
 </div>
