Fixed a long standing font issue (will work for everyone in release), changed the UI, added scroll lock

--- a/html/ui.html
+++ b/html/ui.html
@@ -1,19 +1,25 @@
 <div id="shrub-title-bar">
 	<h1>
-		Shrub v0.2.0
+		Shrub v0.3.0
 	</h1>
 </div>
 <div id="shrub-browser">
-	<div class="shrub-browser-link"><p>A</p></div>
-	<div class="shrub-browser-link"><p>A</p></div>
-	<div class="shrub-browser-link"><p>A</p></div>
-	<div class="shrub-browser-link"><p>A</p></div>
-	<div class="shrub-browser-link"><p>A</p></div>
-	<div class="shrub-browser-link"><p>A</p></div>
-	<div class="shrub-browser-link"><p>A</p></div>
-	<div class="shrub-browser-link"><p>A</p></div>
-	<div class="shrub-browser-link"><p>A</p></div>
-	<div class="shrub-browser-link"><p>A</p></div>
-	<div class="shrub-browser-link"><p>A</p></div>
-	<div class="shrub-browser-link"><p>A</p></div>
+	<div class="shrub-browser-link">
+		<div class="shrub-browser-link-text">
+			<p>Apps</p>
+			<p>https://www.website.org</p>
+		</div>
+	</div>
+	<div class="shrub-browser-link">
+		<div class="shrub-browser-link-text">
+			<p>Apps</p>
+			<p>google.com</p>
+		</div>
+	</div>
+	<div class="shrub-browser-link">
+		<div class="shrub-browser-link-text">
+			<p>Apps</p>
+			<p>blob:information,video</p>
+		</div>
+	</div>
 </div>
