Implemented dynamic link creation, about to make it really show the history

--- a/html/ui.html
+++ b/html/ui.html
@@ -1,9 +1,30 @@
 <div id="shrub-title-bar">
-	<h1>
-		Shrub v0.3.0
-	</h1>
+	<p id="shrub-title-text">
+		Shrub
+	</p>
+	<p id="shrub-version-text">
+		 v0.3.0
+	</p>
 </div>
 <div id="shrub-browser">
+	<!-- <div class="shrub-browser-link">
+		<div class="shrub-browser-link-text">
+			<p>Apps</p>
+			<p>https://www.website.org</p>
+		</div>
+	</div>
+	<div class="shrub-browser-link">
+		<div class="shrub-browser-link-text">
+			<p>Other link</p>
+			<p>google.com</p>
+		</div>
+	</div>
+	<div class="shrub-browser-link">
+		<div class="shrub-browser-link-text">
+			<p>Information!</p>
+			<p>blob:information,video</p>
+		</div>
+	</div>
 	<div class="shrub-browser-link">
 		<div class="shrub-browser-link-text">
 			<p>Apps</p>
@@ -12,14 +33,14 @@
 	</div>
 	<div class="shrub-browser-link">
 		<div class="shrub-browser-link-text">
-			<p>Apps</p>
+			<p>Other link</p>
 			<p>google.com</p>
 		</div>
 	</div>
 	<div class="shrub-browser-link">
 		<div class="shrub-browser-link-text">
-			<p>Apps</p>
+			<p>Information!</p>
 			<p>blob:information,video</p>
 		</div>
-	</div>
+	</div> -->
 </div>
