--- a/html/popup.html
+++ b/html/popup.html
@@ -27,7 +27,7 @@
 					<div class="title">
 						About
 					</div>
-					Shrub is a chrome extension that provides the capability to store browsing history as a tree, as opposed to the linear history system that is default in browsers.
+					Shrub (version 1.0.0) is a chrome extension that provides the capability to store browsing history as a tree, as opposed to the linear history system that is default in browsers.
 				</div>
 				<div class="page">
 					<div class="title">
