--- a/html/popup.html
+++ b/html/popup.html
@@ -33,7 +33,7 @@
 					<div class="title">
 						Extras
 					</div>
-					Shrub is <strike>being actively developed<strike> an unsupported chrome extension by <a href="https://www.twitter.com/Seth_hinz">Seth Hinz</a>, and it's source can be found <a href="https://www.github.com/shinzlet/Shrub">on GitHub.</a>
+					Shrub is <strike>being actively developed</strike> an unsupported chrome extension by <a href="https://www.twitter.com/Seth_hinz">Seth Hinz</a>, and it's source can be found <a href="https://www.github.com/shinzlet/Shrub">on GitHub.</a>
 				</div>
 			</div>
 
